[project]
name = "roamidx"
version = "0.1.0"
description = "build the org roam index file"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ktz>=0.4.0",
    "orgparse>=0.4.20251020",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipython>=9.10.0",
    "pudb>=2025.1.5",
    "pyright[nodejs]>=1.1.408",
]
